Revert "Fix: promo cards overflow bug"
This reverts commit e741b466fa8e7fef9af60cc5ede9aa39ebf41b47.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,13 +195,8 @@ section {
 }
 
 /* Promo CSS */
-section#promo-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .promo-container::-webkit-scrollbar {
-    height: 12px;
+    height: 8px;
 }
 .promo-container::-webkit-scrollbar-track {
     background-color: #F9F6F0;
@@ -211,20 +206,19 @@ section#promo-card {
     border-radius: 4rem;
 }
 .promo-container {
-    padding: 64px 2px 16px;
-    max-width: 1050px;
-    display: flex;
-    align-items: center;
-    gap: 32px;
-    text-align: center;
+    display: grid;
+    gap: 48px;
+    grid-auto-flow: column;
+    grid-auto-columns: 30%;
     overflow-x: auto;
-    margin: 0 10%;
+    overscroll-behavior-inline: contain;
+    text-align: center;
+    margin: 64px 190px;
+    padding-bottom: 8px;
 }
 .promo-card {
-    width: 320px;
+    width: fit-content;
     height: 450px;
-    min-width: 320px;
-    min-height: 450px;
     padding: 16px;
     color: black;
     position: relative;
@@ -234,15 +228,28 @@ section#promo-card {
     border-radius: 6px;
 }
 /* Responsive CSS */
-@media screen and (max-width: 1290px) {
+@media screen and (max-width: 1200px) {
     .promo-container {
-        max-width: 680px;
-        margin: 0;
+        grid-auto-columns: 29%;
+        margin: 32px 64px;
+    }
+    .promo-card {
+        width: fit-content;
+        height: 450px;
+        padding-top: 16px;
     }
 }
-@media screen and (max-width: 850px) {
+
+@media screen and (max-width: 800px) {
     .promo-container {
-        max-width: 350px;
+        grid-auto-columns: 46%;
+        margin: 16px;
+    }
+}
+@media screen and (max-width: 600px) {
+    .promo-container {
+        grid-auto-columns: 90%;
+        margin: 50px;
     }
 }
 .promo-card:hover > * , .promo-card:hover svg path {
